--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.1.0",
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "mysql2": "^2.3.3",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
@@ -39,6 +40,7 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
